--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-astropy==4.3.1
+astropy
 backcall==0.2.0
 certifi==2021.5.30
 charset-normalizer==2.0.4
@@ -21,6 +21,7 @@ parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.3.1
+loguru
 prompt-toolkit==3.0.19
 psutil==5.8.0
 ptyprocess==0.7.0
