working two stage docker

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ astropy-iers-data==0.2024.4.15.2.45.49 ; python_version >= "3.11" and python_ver
 astropy==6.0.1 ; python_version >= "3.11" and python_version < "3.12"
 astroquery==0.4.7 ; python_version >= "3.11" and python_version < "3.12"
 asttokens==2.4.1 ; python_version >= "3.11" and python_version < "3.12"
-backports-tarfile==1.0.0 ; python_version >= "3.11" and python_version < "3.12"
+backports-tarfile==1.1.0 ; python_version >= "3.11" and python_version < "3.12"
 beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "3.12"
 beautifultable==1.1.0 ; python_version >= "3.11" and python_version < "3.12"
 certifi==2024.2.2 ; python_version >= "3.11" and python_version < "3.12"
@@ -34,7 +34,7 @@ ipython==8.23.0 ; python_version >= "3.11" and python_version < "3.12"
 ipywidgets==8.1.2 ; python_version >= "3.11" and python_version < "3.12"
 jaraco-classes==3.4.0 ; python_version >= "3.11" and python_version < "3.12"
 jaraco-context==5.3.0 ; python_version >= "3.11" and python_version < "3.12"
-jaraco-functools==4.0.0 ; python_version >= "3.11" and python_version < "3.12"
+jaraco-functools==4.0.1 ; python_version >= "3.11" and python_version < "3.12"
 jedi==0.19.1 ; python_version >= "3.11" and python_version < "3.12"
 jeepney==0.8.0 ; python_version >= "3.11" and python_version < "3.12" and sys_platform == "linux"
 jupyter-client==8.6.1 ; python_version >= "3.11" and python_version < "3.12"
@@ -44,7 +44,7 @@ keyring==25.1.0 ; python_version >= "3.11" and python_version < "3.12"
 kiwisolver==1.4.5 ; python_version >= "3.11" and python_version < "3.12"
 loguru==0.7.2 ; python_version >= "3.11" and python_version < "3.12"
 lxml==5.2.1 ; python_version >= "3.11" and python_version < "3.12"
-matplotlib-inline==0.1.6 ; python_version >= "3.11" and python_version < "3.12"
+matplotlib-inline==0.1.7 ; python_version >= "3.11" and python_version < "3.12"
 matplotlib==3.8.4 ; python_version >= "3.11" and python_version < "3.12"
 more-itertools==10.2.0 ; python_version >= "3.11" and python_version < "3.12"
 mpmath==1.3.0 ; python_version >= "3.11" and python_version < "3.12"
@@ -69,6 +69,7 @@ pygments==2.17.2 ; python_version >= "3.11" and python_version < "3.12"
 pyparsing==3.1.2 ; python_version >= "3.11" and python_version < "3.12"
 pypdf==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "3.12"
+python-dotenv==1.0.1 ; python_version >= "3.11" and python_version < "3.12"
 pyvo==1.5.1 ; python_version >= "3.11" and python_version < "3.12"
 pywin32-ctypes==0.2.2 ; python_version >= "3.11" and python_version < "3.12" and sys_platform == "win32"
 pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.11" and python_version < "3.12"
@@ -90,7 +91,7 @@ traitlets==5.14.2 ; python_version >= "3.11" and python_version < "3.12"
 typing-extensions==4.11.0 ; python_version >= "3.11" and python_version < "3.12"
 unyt==3.0.2 ; python_version >= "3.11" and python_version < "3.12"
 urllib3==2.2.1 ; python_version >= "3.11" and python_version < "3.12"
-virtualenv==20.25.1 ; python_version >= "3.11" and python_version < "3.12"
+virtualenv==20.25.3 ; python_version >= "3.11" and python_version < "3.12"
 wcwidth==0.2.13 ; python_version >= "3.11" and python_version < "3.12"
 webencodings==0.5.1 ; python_version >= "3.11" and python_version < "3.12"
 widgetsnbextension==4.0.10 ; python_version >= "3.11" and python_version < "3.12"
