--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ yt = "^4.3.1"
 h5py = "^3.11.0"
 loguru = "^0.7.2"
 pydantic = "^2.7.0"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
