--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
   hooks:
   - id: ruff
     types_or: [python, pyi, jupyter]
+    args: [--fix]
   - id: ruff-format
     types_or: [python, pyi, jupyter]
 - repo: https://github.com/kynan/nbstripout
