--- a/config.toml
+++ b/config.toml
@@ -44,19 +44,20 @@ deblending_n_gen = 0.5 # Fraction of n_gen
 deblending_min_sep = 0.0 # in arcsec
 deblending_max_sep = 5.0 # in arcsec # TODO: determine this value
 deblending_max_flux_delta = 0.5 # the maximum difference between two sources in flux # TODO: determine this value
+put_source_in_center = 1
 
 [simput.bkg]
 n_gen = 0 # 1
 
 [simulation]
 num_processes = 16
-instruments = ["epn"] # , "emos1", "emos2"]
+#instruments = ["epn"] # , "emos1", "emos2"]
 filter = "thin"
 res_mults = [1, 2]
 max_exposure = 100000
-modes.img = 0 # 1
-modes.agn = 1 #-1
-modes.bkg = 0 # 25000
+#modes.img = 0 # 1
+#modes.agn = 1 #-1
+#modes.bkg = 0 # 25000
 sim_separate_ccds = false # true
 # We create a very small wait time when the separate_ccds is false
 # in order to avoid readout artifacts.
