--- a/config.toml
+++ b/config.toml
@@ -40,8 +40,9 @@ n_gen = 0 # -1 for all
 
 [simput.agn]
 n_gen = 1 #25000
-deblending_n_gen = 0.5 # Fraction of n_gen
-deblending_min_sep = 0.0 # in arcsec
+deblending_n_gen = 1 # Fraction of n_gen
+deblending_n_flux = 0.5 # Fraction of all blended agns (must be <= 0.5)
+deblending_min_sep = 4.9 # in arcsec
 deblending_max_sep = 5.0 # in arcsec # TODO: determine this value
 deblending_max_flux_delta = 0.5 # the maximum difference between two sources in flux # TODO: determine this value
 put_source_in_center = 1
@@ -55,18 +56,15 @@ num_processes = 16
 filter = "thin"
 res_mults = [1, 2]
 max_exposure = 100000
-#modes.img = 0 # 1
-#modes.agn = 1 #-1
-#modes.bkg = 0 # 25000
 sim_separate_ccds = false # true
 # We create a very small wait time when the separate_ccds is false
 # in order to avoid readout artifacts.
 wait_time = 0.00002304 # Correct separate wait_time = 0.00002304
 
 [simulation.modes]
-img = -1
+img = 0
 agn = -1
-bkg = 25000
+bkg = 0
 
 [instruments.xmm]
 emos1 = {use = false, filter = "thin", sim_separate_ccds = false, max_event_pattern = 12}
